@@ -5,6 +5,7 @@ import org.junit.Test;
 import utils.FileUtil;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class LibProjectTest {
 
@@ -16,7 +17,7 @@ public class LibProjectTest {
 
     @Test
     public void test2(){
-        System.out.println(FilenameUtils.removeExtension(Path.of("libtest/sa-compile.jar").toString()));
+        System.out.println(FilenameUtils.removeExtension(Paths.get("libtest/sa-compile.jar").toString()));
     }
 
 }
